// Copyright (c) XJ Music Inc. (https://xj.io) All Rights Reserved.

plugins {
  id 'java'
  id 'application'
  id 'distribution'
  //
  id "de.undercouch.download"
  id "org.flywaydb.flyway"
  id 'io.spring.dependency-management'
  id 'nu.studer.jooq'
  id 'org.ajoberstar.grgit'
  id 'org.springframework.boot'
}

group = 'io.xj'
version = '1.0'

description = 'XJ music platform backend services'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

apply plugin: 'java'

repositories {
  mavenLocal()
  maven {
    url = 'https://repo.maven.apache.org/maven2'
  }
  maven {
    url = 'https://packages.confluent.io/maven/'
  }
}

dependencies {
  implementation 'ch.qos.logback:logback-classic:1.2.9'
  implementation platform('software.amazon.awssdk:bom:2.20.56')
  implementation 'software.amazon.awssdk:s3'
  implementation 'software.amazon.awssdk:sns'
  implementation 'software.amazon.awssdk:cloudwatch'
  implementation 'software.amazon.awssdk:secretsmanager'
  implementation "com.fasterxml.jackson.core:jackson-annotations:${rootProject.ext.jacksonAnnotationsVersion}"
  implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${rootProject.ext.jacksonAnnotationsVersion}"
  implementation 'com.github.axet:TarsosDSP:2.4-1'
  implementation 'com.github.rholder:snowball-stemmer:1.3.0.581.1'
  implementation 'com.typesafe:config:1.4.1'
  implementation 'com.zaxxer:HikariCP:5.0.0'
  implementation 'commons-codec:commons-codec:1.13'
  implementation 'commons-io:commons-io:2.11.0'
  implementation 'javax.activation:activation:1.1.1'
  implementation 'javax.cache:cache-api:1.1.1'
  implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
  implementation 'me.xdrop:fuzzywuzzy:1.3.1'
  implementation 'net.logstash.logback:logstash-logback-encoder:6.6'
  implementation 'org.apache.httpcomponents:httpclient:4.5.13'
  implementation 'org.jooq:jooq-codegen:3.15.2'
  implementation 'org.jooq:jooq:3.15.2'
  implementation 'org.json:json:20220320'
  implementation 'org.reflections:reflections:0.10.1'
  implementation 'org.slf4j:log4j-over-slf4j:1.7.32'
  implementation 'org.slf4j:slf4j-api:1.7.32'
  implementation "org.springframework.boot:spring-boot-starter-web:${rootProject.ext.springBootVersion}"
  implementation 'org.yaml:snakeyaml:1.33'
  testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
  testImplementation 'junit:junit:4.13.2'
  testImplementation 'org.assertj:assertj-core:3.21.0'
  testImplementation 'org.hamcrest:hamcrest-library:2.2'
  testImplementation 'org.mockito:mockito-core:4.0.0'
  testImplementation "org.springframework.boot:spring-boot-starter-test:${rootProject.ext.springBootVersion}"
  testImplementation "org.springframework.boot:spring-boot-test:${rootProject.ext.springBootVersion}"
  testImplementation "org.springframework:spring-test:${rootProject.ext.springTestVersion}"
  testImplementation "org.springframework:spring-context:${rootProject.ext.springTestVersion}"
}

jar {
  manifest {
    attributes 'Main-Class': 'io.xj.lib.Main'
  }
}

application {
  mainClassName = 'io.xj.lib.Main'
}

group = 'io.xj'
description = 'lib'
version = '1.0'

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}
